# copernicus2

./: .gitignore
src/: copernicus.sh  rviz_config.rviz
src/copernicus_base/launch/: bringup.launch  bringup_imu.launch  sensors.launch
src/copernicus_control/config/: control.yaml  twist_mux.yaml
src/copernicus_control/launch/: control.launch
src/copernicus_description/launch/: description.launch
src/copernicus_hardware/: CMakeLists.txt  package.xml
src/copernicus_hardware/include/copernicus_base/: constants.h  copernicusDataStruct.h  copernicus_hardware.h  tableToRos.h
src/copernicus_hardware/src/: conversion.cpp  copernicusDataStruct.cpp  copernicus_base.cpp  copernicus_hardware.cpp  queue.cpp  serialMain.cpp  tableToRos.cpp
src/copernicus_localization/config/: localization.yaml
src/copernicus_navigation/config/: costmap.yaml  costmap_global.yaml  costmap_local.yaml  global_planner.yaml  local_planner.yaml
src/copernicus_navigation/launch/: navigation.launch
src/copernicus_navigation/maps/: blank_map.yaml  mymap.pgm  mymap.yaml  mymap2.pgm  mymap2.yaml
src/copernicus_navigation/rviz_config/: navigation.rviz
src/copernicus_rules/: udev_rules.rules
src/copernicus_teleoperator/config/: joy.yaml
