<?xml version="1.0"?>
<package>
  <name>copernicus_hardware</name>
  <version>1.1.0</version>
  <description>The copernicus_hardware package</description>

  <maintainer email="nikhil@botsync.sg">Nikhil Venkatesh</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosserial_python</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>copernicus_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>copernicus_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  
  <export>
  </export>
</package>
